Begin spiking out part 2 of button post

--- a/posts/styled-system-button.mdx
+++ b/posts/styled-system-button.mdx
@@ -333,7 +333,7 @@ This is a great workflow for when you want to add spacing quickly and efficientl
 of markup. By default, it will ensure that design system scales will be used so that things
 remain consistent.
 
-## What else?
+## What's next?
 
 You can continue going further with other style functions for `box-shadow`, `line-height`,
 and more.
@@ -346,4 +346,5 @@ Using this approach you can create components that can do essentially anything.
 Especially with the `variant` prop you can create enums that map to groups of
 styling which ensure a great developer experience.
 
+[Start reading part 2](/styled-system-button-2)
 [See the CodeSandbox](https://codesandbox.io/s/wql9613x4w)
