--- a/notes/music/2019.md
+++ b/notes/music/2019.md
@@ -1,1 +1,3 @@
-- Kiasmos - Full Performance (Live on KEXP) - https://www.youtube.com/watch?v=4fHw4GeW3EU
+- Kiasmos - Full Performance (Live on KEXP): https://www.youtube.com/watch?v=4fHw4GeW3EU
+- dead end, an album by uglyyyy: https://www.youtube.com/watch?v=I8rccDb7XeY
+- Misu Beats - It Was Better Back Then [EP]: https://www.youtube.com/watch?v=viD-bQg1WKg
