--- a/posts/latent-component-shadowing.mdx
+++ b/posts/latent-component-shadowing.mdx
@@ -1,6 +1,6 @@
 ---
-title: Latent shadowing
-path: /latent-shadowing
+title: Latent Component Shadowing
+path: /latent-component-shadowing
 date: 2019-04-05
 tags:
   - gatsby
@@ -11,8 +11,7 @@ With Gatsby Themes we've been thinking about the different layers that
 will likely exist in the ecosystem. When I try to boil it down I end up
 with something like:
 
-- **Data Provider:** Source of your data (CMS, file system, etc.)
-- **Data Model:** Shape of your data after transformation (BlogPost, PortfolioItem, StoreItem, etc.)
+- **Data Model:** The real-world view of your data (BlogPost, PortfolioItem, StoreItem, etc.)
 - **Templating:** Runs GraphQL queries and programmatically creates pages
 - **Rendering:** Accepts props and renders React components
 
@@ -54,11 +53,11 @@ the theme, if using all three sources, would end up with a theme composition
 looking like the following:
 
 ```
-gatsby-provider-shopify => gatsby-data-store => gatsby-theme-ecommerce       \
-
-gatsby-provider-contentful => gatsby-data-blog => gatsby-theme-blog  ---  gatsby-theme-tomato
-
-gatsby-provider-instagram => gatsby-data-portfolio => gatsby-theme-portfolio /
+shopify => gatsby-data-ecommerce => gatsby-theme-ecommerce  \
+                                                             \
+contentful => gatsby-data-blog => gatsby-theme-blog --------- gatsby-theme-tomato
+                                                              /
+instagram => gatsby-data-portfolio => gatsby-theme-portfolio /
 ```
 
 Ideally, `gatsby-theme-tomato` would be able to build React components that
@@ -68,7 +67,7 @@ data or even render the templates. With Component Shadowing, this is possible!
 ## Gatsby Theme Tomato
 
 If we know the architecture of a theme that we'll support we can
-now create a "bag of components" that are built around Latent Shadowing. This
+now create a "bag of components" that are built around Latent Component Shadowing. This
 allows the `gatsby-theme-tomato` developer to support a collection of built in themes
 that are automatically activated when the data source and template are "turned on"
 when a theme like `gatsby-theme-blog` is installed and configured.
@@ -128,13 +127,13 @@ module.exports = {
 When `gatsby develop` is restarted, `gatsby-theme-tomato` takes over the
 rendering of the portfolio theme as well.
 
-This is leveraging Latent Shadowing.
+This is leveraging Latent Component Shadowing.
 
 ## A real world application
 
 I'm currently working on a project called
 [Digital Garden](https://github.com/johno/digital-garden) that is using
-Latent Shadowing.
+Latent Component Shadowing.
 
 The idea is that `gatsby-theme-digital-garden` is the base. It sources your
 `notes` directory and creates pages for each note and a directory listing.
@@ -203,7 +202,7 @@ theme so there isn't a need.
 
 ## Conclusion
 
-Latent Shadowing can be a powerful way as a theme author to add support for a collection
+Latent Component Shadowing can be a powerful way as a theme author to add support for a collection
 of themes that handle data sourcing, page creation, and templating. You can operate
 solely at the React level and build new things without needing to dive into the lower
 levels of Gatsby until you need to. You simply write components that lay dormant until
