--- a/posts/latent-component-shadowing.mdx
+++ b/posts/latent-component-shadowing.mdx
@@ -7,6 +7,9 @@ tags:
   - themes
 ---
 
+> A set of components that aren't used until a specific theme is also installed,
+at which point they shadow that theme's components
+
 With Gatsby Themes we've been thinking about the different layers that
 will likely exist in the ecosystem. When I try to boil it down I end up
 with something like:
