Remove data provider blurb

--- a/posts/latent-component-shadowing.mdx
+++ b/posts/latent-component-shadowing.mdx
@@ -20,7 +20,7 @@ with something like:
 
 ## Emerging patterns
 
-The Data Provider and Data Model handle the sourcing of data and its
+The Data Model handles the sourcing of data and its
 transformation to a standard type/schema. In the wild there are pretty
 standardized object types like BlogPosts and StoreItems so we could
 expose officially supported models.
