--- a/notes/gatsby/component-shadowing.mdx
+++ b/notes/gatsby/component-shadowing.mdx
@@ -18,7 +18,7 @@ with Component Shadowing.
 ### Theme file structure
 
 `gatsby-theme-blog` has the following file structure (note that some files are
-ommitted for brevity):
+omitted for brevity):
 
 ```
 gatsby-theme-blog
