--- a/notes/gatsby/component-shadowing.mdx
+++ b/notes/gatsby/component-shadowing.mdx
@@ -129,5 +129,5 @@ being used in production.
 
 ## Further Reading
 
-- [Component Shadowing documentation](https://www.gatsbyjs.org/docs/themes/api-reference/#component-shadowing)
+- [Component Shadowing Documentation](https://www.gatsbyjs.org/docs/themes/api-reference/#component-shadowing)
 - [Latent Component Shadowing](https://johno.com/latent-component-shadowing)
