Use title case everywhere... again

--- a/notes/gatsby/component-shadowing.mdx
+++ b/notes/gatsby/component-shadowing.mdx
@@ -15,7 +15,7 @@ If you've installed `gatsby-theme-blog` you'll notice that it renders a
 which is used in the BlogPost template. If you'd like to change the component you can do so
 with Component Shadowing.
 
-### Theme file structure
+### Theme File Structure
 
 `gatsby-theme-blog` has the following file structure (note that some files are
 omitted for brevity):
