Add missing comma

--- a/posts/stability.mdx
+++ b/posts/stability.mdx
@@ -50,7 +50,7 @@ When you achieve stability you'll be ridiculed by many avatar patterns on GitHub
 > Is this project deprecated? It hasn't been updated this month.
 
 I've built my fair share of libraries and have seen many "Is this project dead" issues in my notifications.
-I don't think it's malicious either.
+I don't think it's malicious.
 We've developed this norm that successful projects are updated daily.
 Many of the large projects in open source software are updated _hourly_.
 
