--- a/posts/authorable-format.mdx
+++ b/posts/authorable-format.mdx
@@ -1,5 +1,6 @@
 ---
 title: Authorable format
+description: Having a human-readable serialization format is empowering for writers and developers.
 path: /authorable-format
 date: 2019-03-15
 tags:
