Tweak about page

--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -9,13 +9,12 @@ Especially things that blur the lines between design and development. I 🖤 com
 
 #### Check out what I'm working on
 
-- [Gatsby][gatsby]
 - [MDX][mdx]
-- [Compositor][c8r]
-- [Kit][kit]
-- [x0][x0]
+- [Gatsby][gatsby]
+- [Theme UI](https://theme-ui.com)
+- [Components AI](https://components.ai)
+- [Blocks](https://mdx-blocks.com)
 - [Styled System][sys]
-- [Standard Components][std]
 - [Random A11y][rand]
 - [CSS Stats][css]
 - [... and other stuff][gh]
@@ -23,7 +22,6 @@ Especially things that blur the lines between design and development. I 🖤 com
 [gh]: https://github.com/johno
 [tw]: https://twitter.com/4lpine
 [gatsby]: https://gatsbyjs.org
-[c8r]: https://compositor.io
 [mdx]: https://github.com/mdx-js/mdx
 [kit]: https://github.com/c8r/kit
 [x0]: https://github.com/c8r/x0
