--- a/posts/build-for-you.mdx
+++ b/posts/build-for-you.mdx
@@ -8,12 +8,12 @@ tags:
   - oss
 ---
 
-Being able to build software products is an extremely powerful thing.
-Every day you probably also see numerous inefficiencies you want to
+Being able to build software products is an extremely powerful skill.
+Every day you probably see numerous inefficiencies you want to
 address with this new power. Unfortunately, time is pretty limited so
 you can't address everything.
 
-So, when I'm starting out a new side project I always make sure that
+When I'm starting out a new side project I always make sure that
 I'm "building for me". After all, when you're building software you're
 the first user.
 
@@ -36,6 +36,8 @@ tool can have a higher impact. These are potential users, too.
 It’s important to note that it’s better to automate things that add up to
 a lot of time or discomfort each year. Optimizing infrequent tasks that are
 low friction won’t result in a drastic improvement.
+
+They can even turn into a time sink. Not all rabbit holes are worth exploring.
 
 ## Dogfooding
 
@@ -69,8 +71,18 @@ If you're finding value in something that you're building _while you're building
 it_ you'll be continually iterating. Projects need momentum, and a small bugfix
 each week has high long term value.
 
+## Inspiration
+
+When deciding between projects, make sure you choose something interesting.
+Whether that means solving a problem that inspires you or using a tech stack
+that will keep you coming back for more.
+
+It's easy to keep working on a project when it doesn't feel burdensome.
+
 ## Conclusion
 
 Writing software should be about having fun, being creative, and improving
 lives. If you're your own first user, by building for you, you'll have a
 head start.
+
+Happy hacking <3
