A couple more tweaks

--- a/posts/presentational-context.mdx
+++ b/posts/presentational-context.mdx
@@ -11,11 +11,11 @@ your component mapping for Markdown elements in one place
 (your layout) so that all MDX documents will know what component
 to render.
 
-> When you encounter an h1 in MDX, render MyH1 instead.
-
 Then, we began to see more potential usages for libraries like
 [Theme UI](https://theme-ui.com) and [Blocks](https://mdx-blocks.com).
-Now it's a UI pattern so it's time to coin it.
+Now it's a "UI pattern" so it's time to coin it.
+
+https://johno.johno1.now.sh
 
 This avoids needing to use global, or scoped, CSS styles to
 target MDX documents and even allows users to layer in more
