--- a/posts/presentational-context.mdx
+++ b/posts/presentational-context.mdx
@@ -13,9 +13,9 @@ to render.
 
 Then, we began to see more potential usages for libraries like
 [Theme UI](https://theme-ui.com) and [Blocks](https://mdx-blocks.com).
-Now it's a "UI pattern" so it's time to coin it.
+Now it's a UI pattern so it's time to coin it.
 
-https://johno.johno1.now.sh
+> When you encounter an h1 in MDX, render MyH1 instead.
 
 This avoids needing to use global, or scoped, CSS styles to
 target MDX documents and even allows users to layer in more
