Okay last tweaks I think

--- a/posts/presentational-context.mdx
+++ b/posts/presentational-context.mdx
@@ -5,8 +5,8 @@ date: 2019-07-10
 ---
 
 MDX helped popularize placing components in context and using
-them to render in child components. At the time, it seemed
-like a unique need for MDX, since it made sense to declare
+them it to control the presentation of child components. At the time,
+it seemed like a need unique MDX. It made sense to declare
 your component mapping for Markdown elements in one place
 (your layout) so that all MDX documents will know what component
 to render.
