--- a/posts/presentational-context.mdx
+++ b/posts/presentational-context.mdx
@@ -190,9 +190,9 @@ Using the component:
 
 So far we have found that it does, and have yet to see evidence to the
 contrary. In some circumstances it can result in smaller SSR-ed documents
-because **prism output can sometime 10x DOM output when rendered to markup**.
-Granted, this is only the case after rehydration, but that's a fine tradeoff
-for content-heavy sites with multi-page visits.
+because **prism output can sometimes 10x DOM output when rendered to markup**.
+Granted, a smaller DOM output is most beneficial after rehydration, but
+that's a fine tradeoff for content-heavy sites with multi-page visits.
 
 ## The future
 
