Add link to repo

--- a/posts/publishing-gatsby-starters-from-a-monorepo.mdx
+++ b/posts/publishing-gatsby-starters-from-a-monorepo.mdx
@@ -137,3 +137,5 @@ it easier.
 Using a GitHub Action to publish read only starters from a
 monorepo is a rad way to automate working with the existing
 Gatsby project scaffold tooling.
+
+[See a project using this workflow](https://github.com/johno/gatsby-theme-documentation)
